[package]
name = "drop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = { version = "0.4.0" }
httpmock = { version = "0.7.0",  features = ["remote"] }
isahc = "1.7.2"
log = "0.4.22"
log-derive = "0.4.1"
simplelog = "0.12.2"
serde_json = "1.0.114"
serde = "1.0.197"
anyhow = "1.0.86"
base64 = "0.22.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
colored = "2.1.0"
cli-table = "0.4"
thiserror = "1.0.58"
once_cell = "1.19.0"

hcl-rs = "=0.16.7"
hcl-primitives = { version = "0.1.2", features = ["serde"] }
indexmap = "2.2.5"
vecmap-rs = "0.1.15"
lazy_static = "1.5.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
rand = "0.8.5"
tokio = "1.38.0"
clap = { version = "4.5.2", features = ["derive"] }
log-attributes = "0.1.0"

[dev-dependencies]
httpmock = "0.7.0-rc.1"
